--- a/resume.html
+++ b/resume.html
@@ -1,12 +1,3 @@
-<!-- RESUME.hmtl
-Full name or handle (if you are not comfortable with providing your identity). IMPORTANT: For privacy reasons, please do not list your addresses or telephone numbers.
-Education
-Relevant Coursework
-Professional Experience. For each job, list accomplishments. Use the past-tense if you no longer work at the job; in the present-tense if you are currently employed at the job. Use bullets-points, an unordered list.
-Skills (e.g., programming languages)
-Activities that are related to your field of study or work
--->
-
 <!doctype html>
 <html>
 <head>
@@ -14,5 +5,20 @@ Activities that are related to your field of study or work
 </head>
 
 <body>
+<h1>Deanna Baris</h1>
+
+<h4>Education:</h4>
+<p> Tufts University, Medford MA</p>
+<p> Bachelors Degree, Computer Science & Architectural Studies, expected May 2018</p>
+
+<h4>Relevant Coursework:</h4>
+<p>Data Structures, Machine Structures and Programming, Programming Languages, Web Programming, Calc III, Differential Equations, Discrete Math, Linear Algebra, Computer Aided Design</p>
+
+<h4>Professional Experience:</h4>
+
+<h4>Skills:</h4>
+
+<h4>Activites:</h4>
+
 </body>
 </html>
