adding bio.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 </head>
 <body>
 	<h1>Deanna Baris</h1>
-	<img src="puppy.jpeg" alt="puppy">
+	<img src="images/puppy.jpeg" alt="puppy">
+	<a href="resume.html">Resume</a>
+	<a href="bio.html">Bio</a>
 </body>
 
 </html>
