adding css files

--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 	<title>Deanna Baris</title>
+	<meta charset="utf-8">
+	<link href="style.css" rel="stylesheet" />
 </head>
 <body>
 	<h1>Deanna Baris</h1>
-	<img src="images/puppy.jpeg" alt="puppy">
+    <div id="image">
+		<img src="images/puppy.jpeg" alt="puppy">
+	</div>
+	
 	<a href="resume.html">Resume</a>
 	<a href="bio.html">Bio</a>
 </body>
