--- a/resume.html
+++ b/resume.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html>
 <head>
-<title>Deanna Baris</title>
+	<title>Deanna Baris</title>
+	<meta charset="utf-8">
+	<link href="resume.css" rel="stylesheet" />
 </head>
 
 <body>
-<h1>Deanna Baris</h1>
+<h1>Deanna Baris Resume</h1>
 
 <h4>Education:</h4>
 <p> Tufts University, Medford MA</p>
@@ -15,10 +17,20 @@
 <p>Data Structures, Machine Structures and Programming, Programming Languages, Web Programming, Calc III, Differential Equations, Discrete Math, Linear Algebra, Computer Aided Design</p>
 
 <h4>Professional Experience:</h4>
+<h3 class="jobtitle">Fermat Capital Management, Westport, CT</h3>
+<h3> Intern, May - July 2016</h3>
+
+<h3 class="jobtitle">Cultural Alliance of Fairfield County, Norwalk, CT</h3>
+<h3> Intern, May - August 2015</h3>
+
+<h3 class="jobtitle">Let's Get Ready, Norwalk, CT</h3>
+<h3> Math SAT Coach, June - August 2015</h3>
 
 <h4>Skills:</h4>
 
+
 <h4>Activites:</h4>
+<p>Viola, Radio DJ, Drawing & Painting, Cooking, Reading, Fitness</p>
 
 </body>
 </html>
