magenta + blue css design added

--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
     <div id="image">
 		<img src="images/puppy.jpeg" alt="puppy">
 	</div>
-	
-	<a href="resume.html">Resume</a>
-	<a href="bio.html">Bio</a>
+	<div class="pagelinks">
+	<a href="resume.html">RESUME</a>
+	</div>
+	<div class="pagelinks">
+	<a href="bio.html">BIO</a>
+	</div>
+
 </body>
 
 </html>
