--- a/resume.html
+++ b/resume.html
@@ -3,34 +3,73 @@
 <head>
 	<title>Deanna Baris</title>
 	<meta charset="utf-8">
+	<link href="style.css" rel="stylesheet" />	
 	<link href="resume.css" rel="stylesheet" />
 </head>
 
 <body>
-<h1>Deanna Baris Resume</h1>
+<h1>Deanna Baris</h1>
+<h2>RESUME</h2>
 
-<h4>Education:</h4>
-<p> Tufts University, Medford MA</p>
-<p> Bachelors Degree, Computer Science & Architectural Studies, expected May 2018</p>
+<div>
+	<h4 class="sectiontitle">EDUCATION</h4>
+	<p> Tufts University, Medford MA</p>
+	<p> Bachelors Degree, Computer Science & Architectural Studies, expected May 2018</p>
+</div>
 
-<h4>Relevant Coursework:</h4>
-<p>Data Structures, Machine Structures and Programming, Programming Languages, Web Programming, Calc III, Differential Equations, Discrete Math, Linear Algebra, Computer Aided Design</p>
+<div>
+	<h4 class="sectiontitle">RELEVANT COURSEWORK</h4>
+	<ul>
+		<li>Data Structures</li>
+		<li>Machine Structures and Programming</li>
+		<li>Programming Languages</li>
+		<li>Web Programming</li>
+		<li>Calc III</li>
+		<li>Differential Equations</li>
+		<li>Discrete Math</li>
+		<li>Linear Algebra</li>
+		<li>Computer Aided Design</li>
+	</ul>
+</div>
 
-<h4>Professional Experience:</h4>
-<h3 class="jobtitle">Fermat Capital Management, Westport, CT</h3>
-<h3> Intern, May - July 2016</h3>
+<div>
+	<h4 class="sectiontitle">PROFESSIONAL EXPERIENCE</h4>
+	<h4 class="jobtitle"><span class="job">Fermat Capital Management</span>, Westport, CT</h4>
+	<h5> <span class="position"> Intern</span>, May - July 2016</h5>
+	<ul>
+		<li>Wrote Python script to automatically add selected Excel report data to MySQL database</li>
+		<li>Created proof of concept for app to display client data using dynamically created graphs</li>
+		<li>Wrote unit tests for both projects and set up for continuous integration</li>
+	</ul>
 
-<h3 class="jobtitle">Cultural Alliance of Fairfield County, Norwalk, CT</h3>
-<h3> Intern, May - August 2015</h3>
+	<h4 class="jobtitle"><span class="job">Cultural Alliance of Fairfield County</span>, Norwalk, CT</h4>
+	<h5> <span class="position"> Intern</span>, May - August 2015</h5>
+	<ul>
+		<li>Managed website event posts and database</li>
+		<li>Sent emails to members regarding promotions</li>
+		<li>Worked at fundraising events</li>
+	</ul>
 
-<h3 class="jobtitle">Let's Get Ready, Norwalk, CT</h3>
-<h3> Math SAT Coach, June - August 2015</h3>
+	<h4 class="jobtitle"><span class="job">Let's Get Ready</span>, Norwalk, CT</h4>
+	<h5> <span class="position"> Math SAT Coach</span>, June - August 2015</h5>
+	<ul>
+	 	<li>Provided free SAT tutoring for small class of 6-8 high school students</li>
+		<li>Prepared and taught weekly lesson for 8 weeks</li>
+	</ul>
+</div>
 
-<h4>Skills:</h4>
+<div>
+<h4 class="sectiontitle">SKILLS</h4>
+<ul>
+	<li>Proficient in C, C++, Python, JavaScript, HTML/CSS</li>
+	<li>Experience with MySQL, Git, Continuous Integration</li>
+</ul>
+</div>
 
-
-<h4>Activites:</h4>
-<p>Viola, Radio DJ, Drawing & Painting, Cooking, Reading, Fitness</p>
+<div>
+<h4 class="sectiontitle">ACTIVITIES</h4>
+<p>Drawing & Painting, Radio DJ, Cooking, Biking, Fitness</p>
+</div>
 
 </body>
 </html>
