--- a/resume.html
+++ b/resume.html
@@ -68,7 +68,12 @@
 
 <div>
 <h4 class="sectiontitle">ACTIVITIES</h4>
-<p>Drawing & Painting, Radio DJ, Cooking, Biking, Fitness</p>
+<h4 class="jobtitle"><span class="job">UP3 (Urban Planning Club)</span>, Grad School Liaison, Fall 2015 – Present</h4>
+<h4 class="jobtitle"><span class="job">Tufts Orientation Leader</span>, Fall 2015 </h4>
+<ul>
+	<li> Guided freshman through events during first week of college</li>
+	<li> Worked with advisor to create individualized schedules for 15 first year students</li>
+</ul>
 </div>
 
 </body>
