--- a/resume.html
+++ b/resume.html
@@ -68,6 +68,10 @@
 
 <div>
 <h4 class="sectiontitle">ACTIVITIES</h4>
+<h4 class="jobtitle"><span class="job">Teaching Assistant for Machine Structures and Programming</span>, Fall 2016</h4>
+<ul>
+<li>Hold office hours throughout week to assist students one-on-one with course projects</li>
+</ul>
 <h4 class="jobtitle"><span class="job">UP3 (Urban Planning Club)</span>, Grad School Liaison, Fall 2015 – Present</h4>
 <h4 class="jobtitle"><span class="job">Tufts Orientation Leader</span>, Fall 2015 </h4>
 <ul>
