--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<h1>Deanna Baris</h1>
     <div id="image">
-		<img src="images/itme.jpg" alt="personal picture">
+		<img width="200px" src="images/itme.jpg" alt="personal picture">
 	</div>
 	<div class="pagelinks">
 	<a href="resume.html">RESUME</a>
