updating resume TA section

--- a/resume.html
+++ b/resume.html
@@ -70,7 +70,8 @@
 <h4 class="sectiontitle">ACTIVITIES</h4>
 <h4 class="jobtitle"><span class="job">Teaching Assistant for Machine Structures and Programming</span>, Fall 2016</h4>
 <ul>
-<li>Hold office hours throughout week to assist students one-on-one with course projects</li>
+<li>Assist students one-on-one with course projects</li>
+<li>Hold office hours for 4 - 6 hours per week</li>
 </ul>
 <h4 class="jobtitle"><span class="job">UP3 (Urban Planning Club)</span>, Grad School Liaison, Fall 2015 – Present</h4>
 <h4 class="jobtitle"><span class="job">Tufts Orientation Leader</span>, Fall 2015 </h4>
