changing theme to black + white

--- a/index.html
+++ b/index.html
@@ -3,19 +3,27 @@
 <head>
 	<title>Deanna Baris</title>
 	<meta charset="utf-8">
+	<link href="https://fonts.googleapis.com/css?family=Abhaya+Libre|Abril+Fatface|Satisfy" rel="stylesheet">
 	<link href="style.css" rel="stylesheet" />
 </head>
 <body>
-	<h1>Deanna Baris</h1>
+	<h1><a href="index.html">Deanna Baris</a></h1>
+
+	<div id="menu"> 
+		<div class="pagelinks"><a href="bio.html">Bio</a></div>
+		<div class="pagelinks"><a href="resume.html">Resume</a></div>
+		<div class="pagelinks"><a href="skills.html">Skills</a></div>
+		<div class="pagelinks"><a href="https://github.com/dbaris">Github</a></p>
+	</div>
+
     <div id="image">
-		<img width="200px" src="images/itme.jpg" alt="personal picture">
+		<img src="images/itme.jpg" alt="personal picture">
 	</div>
-	<div class="pagelinks">
-	<a href="resume.html">RESUME</a>
+
+	<div id="divbar">
+	_____________________________
 	</div>
-	<div class="pagelinks">
-	<a href="bio.html">BIO</a>
-	</div>
+	
 
 </body>
 
