--- a/resume.html
+++ b/resume.html
@@ -3,83 +3,89 @@
 <head>
 	<title>Deanna Baris</title>
 	<meta charset="utf-8">
+	<link href="https://fonts.googleapis.com/css?family=Abhaya+Libre|Satisfy" rel="stylesheet">
 	<link href="style.css" rel="stylesheet" />	
 	<link href="resume.css" rel="stylesheet" />
 </head>
 
 <body>
-<h1>Deanna Baris</h1>
-<h2>RESUME</h2>
+<h1><a href="index.html">Deanna Baris</a></h1>
+	
+	<div id="menu"> 
+		<div class="pagelinks"><a href="bio.html">Bio</a></div>
+		<div class="pagelinks"><a href="resume.html">Resume</a></div>
+		<div class="pagelinks"><a href="skills.html">Skills</a></div>
+		<div class="pagelinks"><a href="https://github.com/dbaris">Github</a></p>
+	</div>
+	<div id="divbar">
+	_____________________________
+	</div>
 
-<div>
-	<h4 class="sectiontitle">EDUCATION</h4>
-	<p> Tufts University, Medford MA</p>
-	<p> Bachelors Degree, Computer Science & Architectural Studies, expected May 2018</p>
+<h2>Resume</h2>
+<div class="container">
+		<h4 class="sectiontitle">EDUCATION</h4>
+		<!-- <div class="inner"> 
+			<img src="images/tufts.jpg" alt="tufts logo"/>
+		</div> -->
+		<div class="inner">
+			<p> Tufts University, Medford MA</p>
+			<p> Bachelors Degree, Computer Science & Architectural Studies, expected May 2018</p>
+		</div>
+
+
+		<h4 class="sectiontitle">RELEVANT COURSEWORK</h4>
+		<ul>
+			<li>Data Structures</li>
+			<li>Machine Structures and 
+			Programming</li>
+			<li>Programming Languages</li>
+			<li>Web Programming</li>
+			<li>Calc III</li>
+			<li>Differential Equations</li>
+			<li>Discrete Math</li>
+			<li>Linear Algebra</li>
+			<li>Computer Aided Design</li>
+		</ul>
+
+		<h4 class="sectiontitle">PROFESSIONAL EXPERIENCE</h4>
+		<h4 class="jobtitle"><span class="job">Fermat Capital Management</span>, Westport, CT</h4>
+		<h5> <span class="position"> Intern</span>, May - July 2016</h5>
+		<ul>
+			<li>Wrote Python script to automatically add selected Excel report data to MySQL database</li>
+			<li>Created proof of concept for app to display client data using dynamically created graphs</li>
+			<li>Wrote unit tests for both projects and set up for continuous integration</li>
+		</ul>
+
+		<h4 class="jobtitle"><span class="job">Cultural Alliance of Fairfield County</span>, Norwalk, CT</h4>
+		<h5> <span class="position"> Intern</span>, May - August 2015</h5>
+		<ul>
+			<li>Managed website event posts and database</li>
+			<li>Sent emails to members regarding promotions</li>
+			<li>Worked at fundraising events</li>
+		</ul>
+
+		<h4 class="jobtitle"><span class="job">Let's Get Ready</span>, Norwalk, CT</h4>
+		<h5> <span class="position"> Math SAT Coach</span>, June - August 2015</h5>
+		<ul>
+		 	<li>Provided free SAT tutoring for small class of 6-8 high school students</li>
+			<li>Prepared and taught weekly lesson for 8 weeks</li>
+		</ul>
+
+		<h4 class="sectiontitle">LEADERSHIP EXPERIENCE</h4>
+		<h4 class="jobtitle"><span class="job">Teaching Assistant for Machine Structures and Programming</span>, Fall 2016</h4>
+		<ul>
+		<li>Assist students one-on-one with course projects</li>
+		<li>Hold office hours for 4 - 6 hours per week</li>
+		</ul>
+		<h4 class="jobtitle"><span class="job">UP3 (Urban Planning Club)</span>, Grad School Liaison, Fall 2015 – Present</h4>
+		<h4 class="jobtitle"><span class="job">Tufts Orientation Leader</span>, Fall 2015 </h4>
+		<ul>
+			<li> Guided freshman through events during first week of college</li>
+			<li> Worked with advisor to create individualized schedules for 15 first year students</li>
+		</ul>
 </div>
 
-<div>
-	<h4 class="sectiontitle">RELEVANT COURSEWORK</h4>
-	<ul>
-		<li>Data Structures</li>
-		<li>Machine Structures and Programming</li>
-		<li>Programming Languages</li>
-		<li>Web Programming</li>
-		<li>Calc III</li>
-		<li>Differential Equations</li>
-		<li>Discrete Math</li>
-		<li>Linear Algebra</li>
-		<li>Computer Aided Design</li>
-	</ul>
-</div>
 
-<div>
-	<h4 class="sectiontitle">PROFESSIONAL EXPERIENCE</h4>
-	<h4 class="jobtitle"><span class="job">Fermat Capital Management</span>, Westport, CT</h4>
-	<h5> <span class="position"> Intern</span>, May - July 2016</h5>
-	<ul>
-		<li>Wrote Python script to automatically add selected Excel report data to MySQL database</li>
-		<li>Created proof of concept for app to display client data using dynamically created graphs</li>
-		<li>Wrote unit tests for both projects and set up for continuous integration</li>
-	</ul>
-
-	<h4 class="jobtitle"><span class="job">Cultural Alliance of Fairfield County</span>, Norwalk, CT</h4>
-	<h5> <span class="position"> Intern</span>, May - August 2015</h5>
-	<ul>
-		<li>Managed website event posts and database</li>
-		<li>Sent emails to members regarding promotions</li>
-		<li>Worked at fundraising events</li>
-	</ul>
-
-	<h4 class="jobtitle"><span class="job">Let's Get Ready</span>, Norwalk, CT</h4>
-	<h5> <span class="position"> Math SAT Coach</span>, June - August 2015</h5>
-	<ul>
-	 	<li>Provided free SAT tutoring for small class of 6-8 high school students</li>
-		<li>Prepared and taught weekly lesson for 8 weeks</li>
-	</ul>
-</div>
-
-<div>
-<h4 class="sectiontitle">SKILLS</h4>
-<ul>
-	<li>Proficient in C, C++, Python, JavaScript, HTML/CSS</li>
-	<li>Experience with MySQL, Git, Continuous Integration</li>
-</ul>
-</div>
-
-<div>
-<h4 class="sectiontitle">ACTIVITIES</h4>
-<h4 class="jobtitle"><span class="job">Teaching Assistant for Machine Structures and Programming</span>, Fall 2016</h4>
-<ul>
-<li>Assist students one-on-one with course projects</li>
-<li>Hold office hours for 4 - 6 hours per week</li>
-</ul>
-<h4 class="jobtitle"><span class="job">UP3 (Urban Planning Club)</span>, Grad School Liaison, Fall 2015 – Present</h4>
-<h4 class="jobtitle"><span class="job">Tufts Orientation Leader</span>, Fall 2015 </h4>
-<ul>
-	<li> Guided freshman through events during first week of college</li>
-	<li> Worked with advisor to create individualized schedules for 15 first year students</li>
-</ul>
-</div>
 
 </body>
 </html>
