--- a/resume.html
+++ b/resume.html
@@ -3,22 +3,24 @@
 <head>
 	<title>Deanna Baris</title>
 	<meta charset="utf-8">
-	<link href="https://fonts.googleapis.com/css?family=Abhaya+Libre|Satisfy" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Yeseva+One" rel="stylesheet">
 	<link href="style.css" rel="stylesheet" />	
 	<link href="resume.css" rel="stylesheet" />
 </head>
 
 <body>
-<h1><a href="index.html">Deanna Baris</a></h1>
-	
-	<div id="menu"> 
-		<div class="pagelinks"><a href="bio.html">Bio</a></div>
-		<div class="pagelinks"><a href="resume.html">Resume</a></div>
-		<div class="pagelinks"><a href="skills.html">Skills</a></div>
-		<div class="pagelinks"><a href="https://github.com/dbaris">Github</a></p>
-	</div>
-	<div id="divbar">
-	__________________________________________________________________
+	<div class="header">
+		<div id="name">
+		<h1><a class="title" href="index.html">DEANNA <br/> BARIS</a></h1>
+		</div>
+
+		<div id="menu"> 
+			<div class="pagelinks" ><a id="bio" href="bio.html">Bio</a></div>
+			<div class="pagelinks" ><a id="resume" href="resume.html">Resume</a></div>
+			<div class="pagelinks"><a id="skills" href="skills.html">Skills</a></div>
+			<div class="pagelinks"><a id="github" href="https://github.com/dbaris">Github</a></div>
+		</div>
 	</div>
 
 <h2>Resume</h2>
