--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <div id="image">
 		<img src="images/pic.jpg" alt="personal picture">
 	</div>
-	<div id="bioText"><p id="bioP"> Deanna Baris is a Boston-based software engineer and artist. She graduated from Tufts University in 2018 with a double major in Computer Science and Architectural Studies. Deanna is currently a Software Engineer on the Linux endpoint team for the security business unit (formerly Carbon Black) at VMWare. Her professional interests lie in the security and privacy challenges that arise in the intersections between technology and the built environment. After hours, she's usually making painting or knitting. Follow along at <a href="https://www.instagram.com/growing__paints/">@growing__paints</a></p></div>
+	<div id="bioText"><p id="bioP"> Deanna Baris is a Boston-based software engineer and artist. She graduated from Tufts University in 2018 with a double major in Computer Science and Architectural Studies. Deanna is currently a Software Engineer on the Linux endpoint team for the security business unit (formerly Carbon Black) at VMWare. Her professional interests lie in the security and privacy challenges that arise in the intersections between technology and the built environment. After hours, she's usually making painting or knitting. Follow along at <a id="insta" href="https://www.instagram.com/growing__paints/">@growing__paints</a></p></div>
 	<div id="resumeText">
-		<iframe src="files/DeannaBarisResume.pdf" style="position:fixed; top:30vh; left:10vw; bottom:0; right:0; width:80%; height:60%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">Your browser does not support iframes</iframe>
+		<iframe src="files/DeannaBarisResume.pdf">Your browser does not support iframes</iframe>
 	</div>
 	<div id="skillsText">
 		<div id="skillsLeft">
