Use separate HTML pages; create art page; remove resume & skills

--- a/index.html
+++ b/index.html
@@ -18,51 +18,19 @@
 
 	<div class="header">
 		<div id="name">
-		<h1 class="title">DEANNA <br/> BARIS</h1>
+		<h1><a class="title" href="index.html">DEANNA <br/> BARIS</a></h1>
 		</div>
-
 		<div id="menu"> 
-			<button class="pagelinks" id="bio">Bio</button>
-			<button class="pagelinks" id="resume">Resume</button>
-			<button class="pagelinks" id="skills">Skills</button>
-			<!-- <button id="art">Art</button> -->
-			<a class="pagelinks" id="github" href="https://github.com/dbaris">Github</a>
-			<a class="pagelinks" id="linkedin" href="https://www.linkedin.com/in/deanna-baris-362207106/">LinkedIn</a>
-			<a class="pagelinks" id="instagram" href="https://www.instagram.com/growing__paints/">Instagram</a>
+			<a class="pagelinks" href="bio.html">Bio</a>
+			<a class="pagelinks" href="art.html">Art</a>
+			<a class="pagelinks" href="contact.html">Contact</a>
 		</div>
-	</div>
+	</div> <!-- header -->
 	
 	<div id="page">
-    <div id="image">
-		<img src="images/pic.jpg" alt="personal picture">
-	</div>
-	<div id="bioText"><p id="bioP"> Deanna Baris is a Boston-based software engineer and artist. She graduated from Tufts University in 2018 with a double major in Computer Science and Architectural Studies. Deanna is currently a Software Engineer on the Linux endpoint team for the security business unit (formerly Carbon Black) at VMWare. Her professional interests lie in the security and privacy challenges that arise in the intersections between technology and the built environment. After hours, she's usually making painting or knitting. Follow along at <a id="insta" href="https://www.instagram.com/growing__paints/">@growing__paints</a></p></div>
-	<div id="resumeText">
-		<iframe src="files/DeannaBarisResume.pdf">Your browser does not support iframes</iframe>
-	</div>
-	<div id="skillsText">
-		<div id="skillsLeft">
-			<h2>Programming Languages</h2>
-			<p>C, C++, Python, Javascript, HTML/CSS, Latex, SML, Scheme, Lisp</p>
-
-			<h2>Programming Tools</h2>
-			<p>Agile, Git, MySQL, MongoDB, Heroku, Node.js, Bamboo, Jenkins</p>
-
-			<h2>Software</h2>
-			<p>Microsoft Office, Google Drive, AutoCAD, Autodesk Inventor, Revit, 3dsMax</p>
-
-			<h2>Natural Languages</h2>
-			<p>English, Spanish</p>
-		</div>
-	
-		<div id="cornerDiv"></div>
-	</div>
-	<div>
-
-
-	</div>
-	</div>
+	<img id="image" src="images/pic.jpg" alt="personal picture">
+	</div> <!-- page -->
+	</div> <!-- container -->
 
 </body>
-
 </html>
