Make art mobile friendly

--- a/art.html
+++ b/art.html
@@ -36,14 +36,14 @@
 				</p>
 			</div>
 			<div class="artRow">
-				<div class="artImage">
+				<div class="art-image">
 					<img src="images/art/jojo.jpg">
 					<p>Mango</p>
 					<p>Acrylic on Canvas Panel, 2020</p>
 					<p>11" x 14"</p>
 					<p>$75</p>
 				</div>
-				<div class="artImage">
+				<div class="art-image">
 					<img src="images/art/durga.JPG">
 					<p>Portrait of Durga Chew-Bose</p>
 					<p>Acrylic on Canvas, 2019</p>
@@ -53,14 +53,14 @@
 				
 			</div>
 			<div class="artRow">
-				<div class="artImage">
+				<div class="art-image">
 					<img src="images/art/still_life_pack.jpg">
 					<p>Still Life with Oranges</p>
 					<p>Acrylic on Canvas Panel, 2019</p>
 					<p>11" x 14"</p>
 					<p>$75</p>
 				</div>
-				<div class="artImage">
+				<div class="art-image">
 					<img src="images/art/claire_ware.jpg">
 					<p>Not Yet</p>
 					<p>Acrylic on Canvas Panel, 2019</p>
@@ -70,14 +70,14 @@
 				</div>
 			</div>
 			<div class="artRow">
-				<div class="artImage">
+				<div class="art-image">
 					<img src="images/art/reid.jpg">
 					<p>Before</p>
 					<p>Acrylic on Canvas Panel, 2020</p>
 					<p>11" x 14"</p>
 					<p>$75</p>
 				</div>
-				<div class="artImage">
+				<div class="art-image">
 					<img src="images/art/allston.jpg">
 					<p>All Aglow</p>
 					<p>Acrylic on Paper, 2019</p>
@@ -86,7 +86,7 @@
 				</div>
 			</div>
 			<div class="artRow">
-				<div class="artImage">
+				<div class="art-image">
 					<img src="images/art/bus.jpg">
 					<p>Venus</p>
 					<p>Acrylic on Canvas Panel, 2018</p>
@@ -94,7 +94,7 @@
 					<p>$250</p>
 
 				</div>
-				<div class="artImage">
+				<div class="art-image">
 					<img src="images/art/selfportrait.jpg">
 					<p>Self Portrait with Cereal</p>
 					<p>Acrylic on Canvas Panel, 2019</p>
@@ -104,14 +104,14 @@
 				
 			</div>
 			<div class="artRow">
-				<div class="artImage">
+				<div class="art-image">
 					<img src="images/art/figure_painting.jpg">
 					<p>Chartreuse</p>
 					<p>Oil on Canvas Paper, 2020</p>
 					<p>11" x 14"</p>
 					<p>$50</p>
 				</div>
-				<div class="artImage">
+				<div class="art-image">
 					<img src="images/art/still_life_ware.jpg">
 					<p>Still Life Sprouting</p>
 					<p>Acrylic on Canvas Panel, 2017</p>
