--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	</div> <!-- header -->
 	
 	<div id="page">
-	<img id="image" src="images/pic.jpg" alt="personal picture">
+	<img class="image" src="images/pic.jpg" alt="personal picture">
 	</div> <!-- page -->
 	</div> <!-- container -->
 
