Add Shade, remove prices

--- a/art.html
+++ b/art.html
@@ -42,14 +42,12 @@
 					<p>Portrait of Durga Chew-Bose</p>
 					<p>Acrylic on Canvas, 2019</p>
 					<p>18" x 24"</p>
-					<p>$300</p>
 				</div>
 				<div class="art-image">
 					<img src="images/art/bus.jpg">
 					<p>Venus</p>
 					<p>Acrylic on Canvas Panel, 2018</p>
 					<p>22" x 28"</p>
-					<p>$300</p>
 
 				</div>
 				<div class="art-image">
@@ -57,7 +55,12 @@
 					<p>Scream</p>
 					<p>Oil on Canvas Paper, 2020</p>
 					<p>11" x 14"</p>
-					<p>$50</p>
+				</div>
+				<div class="art-image">
+					<img src="images/art/scream.jpg">
+					<p>Shade</p>
+					<p>Oil on Canvas Paper, 2020</p>
+					<p>11" x 14"</p>
 				</div>
 				
 			</div>
@@ -67,7 +70,6 @@
 					<p>Not Yet</p>
 					<p>Acrylic on Canvas Panel, 2019</p>
 					<p>11" x 14"</p>
-					<p>$125</p>
 
 				</div>
 			</div>
@@ -77,14 +79,12 @@
 					<p>Before</p>
 					<p>Acrylic on Canvas Panel, 2020</p>
 					<p>11" x 14"</p>
-					<p>$125</p>
 				</div>
 				<div class="art-image">
 					<img src="images/art/allston.jpg">
 					<p>All Aglow</p>
 					<p>Acrylic on Paper, 2019</p>
 					<p>9" x 12"</p>
-					<p>$50</p>
 				</div>
 			</div>
 			<div class="artRow">
@@ -94,14 +94,12 @@
 					<p>Mango</p>
 					<p>Acrylic on Canvas Panel, 2020</p>
 					<p>11" x 14"</p>
-					<p>$125</p>
 				</div>
 				<div class="art-image">
 					<img src="images/art/selfportrait.jpg">
 					<p>Self Portrait with Cereal</p>
 					<p>Acrylic on Canvas Panel, 2019</p>
 					<p>11" x 14"</p>
-					<p>$75</p>
 				</div>
 				
 			</div>
@@ -111,21 +109,18 @@
 					<p>Chartreuse</p>
 					<p>Oil on Canvas Paper, 2020</p>
 					<p>11" x 14"</p>
-					<p>$50</p>
 				</div>
 				<div class="art-image">
 					<img src="images/art/still_life_pack.jpg">
 					<p>Still Life with Oranges</p>
 					<p>Acrylic on Canvas Panel, 2019</p>
 					<p>11" x 14"</p>
-					<p>$75</p>
 				</div>
 				<div class="art-image">
 					<img src="images/art/still_life_ware.jpg">
 					<p>Still Life Sprouting</p>
 					<p>Acrylic on Canvas Panel, 2017</p>
 					<p>11" x 14"</p>
-					<p>$50</p>
 				</div>				
 			</div>
 			
