--- a/art.html
+++ b/art.html
@@ -57,7 +57,7 @@
 					<p>11" x 14"</p>
 				</div>
 				<div class="art-image">
-					<img src="images/art/scream.jpg">
+					<img src="images/art/shady.png">
 					<p>Shade</p>
 					<p>Oil on Canvas Paper, 2020</p>
 					<p>11" x 14"</p>
