Add knitting page & Floored painting

--- a/art.html
+++ b/art.html
@@ -24,6 +24,7 @@
 		<div id="menu"> 
 			<a class="pagelinks" href="bio.html">Bio</a>
 			<a class="pagelinks" href="art.html">Art</a>
+			<a class="pagelinks" href="knitting.html">Knitwear</a>
 			<a class="pagelinks" href="contact.html">Contact</a>
 		</div>
 	</div>
@@ -32,11 +33,16 @@
 		<div>
 			<div id="art-title">
 				<p>
-				Works marked with prices are available for purchase. For more information on purchasing a painting contact deanna.baris@gmail.com.
+				For more information on purchasing a painting contact deanna.baris@gmail.com. Limited paper and sticker prints are available on <a href=https://www.etsy.com/shop/GrowingPaintsStudio>Etsy</a>.
 				</p>
 			</div>
 			<div class="artRow">
-				
+				<div class="art-image">
+					<img src="images/art/floored.jpg">
+					<p>Floored</p>
+					<p>Acrylic and Oil on Canvas, 2020</p>
+					<p>22" x 28"</p>
+				</div>
 				<div class="art-image">
 					<img src="images/art/durga.JPG">
 					<p>Portrait of Durga Chew-Bose</p>
@@ -57,7 +63,7 @@
 					<p>11" x 14"</p>
 				</div>
 				<div class="art-image">
-					<img src="images/art/scream.jpg">
+					<img src="images/art/shady.png">
 					<p>Shade</p>
 					<p>Oil on Canvas Paper, 2020</p>
 					<p>11" x 14"</p>
