--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,7 @@
 		<div id="menu"> 
 			<a class="pagelinks" href="bio.html">Bio</a>
 			<a class="pagelinks" href="art.html">Art</a>
+			<a class="pagelinks" href="knitting.html">Knitwear</a>
 			<a class="pagelinks" href="contact.html">Contact</a>
 		</div>
 	</div> <!-- header -->
@@ -52,6 +53,10 @@
 			<div>
 				<i class="material-icons">palette</i>
 				<p class="contact-p"><a class="contact-link" href="https://www.ravelry.com/people/dbandjelly">Ravelry</a></p>
+			</div>
+			<div>
+				<i class="material-icons">store</i>
+				<p class="contact-p"><a class="contact-link" href="https://www.etsy.com/shop/GrowingPaintsStudio">Etsy Shop</a></p>
 			</div>
 		</div>
 	
