--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		<div id="menu"> 
 			<a class="pagelinks" href="bio.html">Bio</a>
 			<a class="pagelinks" href="art.html">Art</a>
+			<a class="pagelinks" href="knitting.html">Knitwear</a>
 			<a class="pagelinks" href="contact.html">Contact</a>
 		</div>
 	</div> <!-- header -->
