Disable bio for a little while

--- a/art.html
+++ b/art.html
@@ -11,7 +11,6 @@
 
 	<!-- JS -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="main.js"></script>
 </head>
 <body>
 	<div class="container">
@@ -22,7 +21,7 @@
 		</div>
 
 		<div id="menu"> 
-			<a class="pagelinks" href="bio.html">Bio</a>
+			<!-- <a class="pagelinks" href="bio.html">Bio</a> -->
 			<a class="pagelinks" href="art.html">Art</a>
 			<a class="pagelinks" href="knitting.html">Knitwear</a>
 			<a class="pagelinks" href="contact.html">Contact</a>
