--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<h1><a class="title" href="index.html">DEANNA <br/> BARIS</a></h1>
 		</div>
 		<div id="menu"> 
-			<a class="pagelinks" href="bio.html">Bio</a>
+			<!-- <a class="pagelinks" href="bio.html">Bio</a> -->
 			<a class="pagelinks" href="art.html">Art</a>
 			<a class="pagelinks" href="knitting.html">Knitwear</a>
 			<a class="pagelinks" href="contact.html">Contact</a>
