--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
 		</div>
 
 		<div id="menu"> 
-			<a class="pagelinks" href="bio.html">Bio</a>
+			<!-- <a class="pagelinks" href="bio.html">Bio</a> -->
 			<a class="pagelinks" href="art.html">Art</a>
 			<a class="pagelinks" href="knitting.html">Knitwear</a>
 			<a class="pagelinks" href="contact.html">Contact</a>
