Use image gallery, footer

--- a/contact.html
+++ b/contact.html
@@ -63,6 +63,9 @@
 	</div> <!-- page --> 
 	</div> <!-- container -->
 
+	<footer>
+		Source code available on <a href="https://github.com/dbaris/dbaris.github.io">Github</a>
+	</footer>
 </body>
 
 </html>
