--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 	<img class="image" src="images/pic.jpg" alt="personal picture">
 	</div> <!-- page -->
 	</div> <!-- container -->
-
+	<footer>
+		Source code available on <a href="https://github.com/dbaris/dbaris.github.io">Github</a>
+	</footer>
 </body>
 </html>
