--- a/knitting.html
+++ b/knitting.html
@@ -36,7 +36,7 @@
 					<h3>Daydream Cardigan</h3>
 					<img src="images/knitting/daydream.jpg">
 					<p class="art-text">The Daydream Cardigan is a woolly and whimsical raglan cardigan with a shrug fit. It plays boldly with texture through bulky yarn, bubble sleeves, color-blocking, and a two-color brioche hem. In these difficult times, it’s more important than ever to take a little time to daydream, investing in our collective imagination for a better and more beautiful world.</p>
-					<p class="art-text">Available for purchase on <a href="https://www.etsy.com/listing/899022398/daydream-cardigan-knitting-pattern-pdf">Etsy</a> & <a href="https://www.ravelry.com/patterns/library/daydream-cardigan">Ravelry</a></p>
+					<p class="art-text">Pattern available for purchase on <a href="https://www.etsy.com/listing/899022398/daydream-cardigan-knitting-pattern-pdf">Etsy</a> & <a href="https://www.ravelry.com/patterns/library/daydream-cardigan">Ravelry</a></p>
 				</div>
 			</div>
 			<div class="artRow">
@@ -44,7 +44,7 @@
 					<h3>Rosa Tank Top</h3>
 					<img src="images/knitting/rosa.jpg">
 					<p class="art-text">The Rosa Tank is a 90’s inspired fitted summer tank featuring a high neckline, triangular lacework, and I-Cord finishing. The construction is knit from the top down and works up quickly. Wear it as it is for a gorgeous warm-weather tank, crop it shorter to make a bralette, or layer it with a cute cardigan for cooler seasons. The lace section at the bottom can be omitted for beginner knitters or true committed minimalists. </p>
-					<p class="art-text">Available for purchase on <a href="https://www.etsy.com/listing/844229272/rosa-tank-knitting-pattern-pdf-download">Etsy</a> & <a href="https://www.ravelry.com/patterns/library/rosa-tank">Ravelry</a></p>
+					<p class="art-text">Pattern available for purchase on <a href="https://www.etsy.com/listing/844229272/rosa-tank-knitting-pattern-pdf-download">Etsy</a> & <a href="https://www.ravelry.com/patterns/library/rosa-tank">Ravelry</a></p>
 
 				</div>
 			</div>
