--- a/art.html
+++ b/art.html
@@ -45,7 +45,7 @@
 
 		  <div class="slideshow-image" id="image-1">
 		    <div class="slideshow-title">Portrait of Durga Chew-Bose</div>
-		    <img src="images/art/durga.jpg">
+		    <img src="images/art/durga.JPG">
 		    <div><p>Acrylic on Canvas, 2019</p><p>18" x 24"</p></div>
 		  </div>
 
