--- a/knitting.html
+++ b/knitting.html
@@ -26,6 +26,7 @@
 			<a class="pagelinks" href="art.html">Art</a>
 			<a class="pagelinks" href="knitting.html">Knitwear</a>
 			<a class="pagelinks" href="contact.html">Contact</a>
+			<a class="pagelinks" href="https://issuu.com/dbaris/docs/2.16.2022_1">Portfolio</a>
 		</div>
 	</div>
 	
